results/harness/logs/logs_11652189.err
load SINGULARITY/3.11.5 (PATH)
WARNING: underlay of /etc/localtime required more than 50 (101) bind mounts
WARNING: underlay of /usr/bin/nvidia-smi required more than 50 (487) bind mounts
13:4: not a valid test operator: (
13:4: not a valid test operator: 535.86.10
rm: cannot remove '/usr/local/cuda/compat/lib': Read-only file system
rm: cannot remove '/usr/local/cuda/compat/lib': Read-only file system
rm: cannot remove '/usr/local/cuda/compat/lib': Read-only file system
The following values were not passed to `accelerate launch` and had defaults used instead:
	`--num_processes` was set to a value of `1`
	`--num_machines` was set to a value of `1`
	`--mixed_precision` was set to a value of `'no'`
	`--dynamo_backend` was set to a value of `'no'`
To avoid this warning pass in values for each of the problematic parameters or run `accelerate config`.
/usr/local/lib/python3.10/dist-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.2' currently installed).
  from pandas.core.computation.check import NUMEXPR_INSTALLED
2024-11-12:13:51:11,794 INFO     [__main__.py:251] Verbosity set to INFO
2024-11-12:13:51:16,117 INFO     [__main__.py:335] Selected Tasks: ['bbq_es_all']
2024-11-12:13:51:16,117 INFO     [__main__.py:336] Loading selected tasks...
2024-11-12:13:51:16,117 INFO     [evaluator.py:131] Setting random seed to 1234 | Setting numpy seed to 1234 | Setting torch manual seed to 1234
2024-11-12:13:51:16,117 INFO     [evaluator.py:177] Initializing hf model, with arguments: {'pretrained': '/gpfs/projects/bsc88/text/models/instruction-tuning/models/out_instructed_models/salamandra2b_ca-en-es_v0.2', 'trust_remote_code': True}
2024-11-12:13:51:16,147 INFO     [huggingface.py:164] Using device 'cuda'
You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers
2024-11-12:13:51:25,228 WARNING  [task.py:763] [Task: bbq_es_Age] metric acc is defined, but aggregation is not. using default aggregation=mean
2024-11-12:13:51:25,228 WARNING  [task.py:775] [Task: bbq_es_Age] metric acc is defined, but higher_is_better is not. using default higher_is_better=True
Traceback (most recent call last):
  File "/usr/lib/python3.10/runpy.py", line 196, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/usr/lib/python3.10/runpy.py", line 86, in _run_code
    exec(code, run_globals)
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/__main__.py", line 423, in <module>
    cli_evaluate()
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/__main__.py", line 346, in cli_evaluate
    results = evaluator.simple_evaluate(
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/utils.py", line 288, in _wrapper
    return fn(*args, **kwargs)
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/evaluator.py", line 209, in simple_evaluate
    task_dict = get_task_dict(tasks, task_manager)
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/tasks/__init__.py", line 421, in get_task_dict
    task_name_from_string_dict = task_manager.load_task_or_group(
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/tasks/__init__.py", line 271, in load_task_or_group
    collections.ChainMap(*map(self._load_individual_task_or_group, task_list))
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/tasks/__init__.py", line 254, in _load_individual_task_or_group
    **dict(collections.ChainMap(*map(fn, subtask_list))),
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/tasks/__init__.py", line 162, in _load_individual_task_or_group
    return load_task(task_config, task=name_or_config, group=parent_name)
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/tasks/__init__.py", line 151, in load_task
    task_object = ConfigurableTask(config=config)
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/api/task.py", line 782, in __init__
    self.download(self.config.dataset_kwargs)
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/lm_eval/api/task.py", line 871, in download
    self.dataset = datasets.load_dataset(
  File "/usr/local/lib/python3.10/dist-packages/datasets/load.py", line 2128, in load_dataset
    builder_instance = load_dataset_builder(
  File "/usr/local/lib/python3.10/dist-packages/datasets/load.py", line 1849, in load_dataset_builder
    builder_cls = get_dataset_builder_class(dataset_module, dataset_name=dataset_name)
  File "/usr/local/lib/python3.10/dist-packages/datasets/load.py", line 196, in get_dataset_builder_class
    builder_cls = import_main_class(dataset_module.module_path)
  File "/usr/local/lib/python3.10/dist-packages/datasets/load.py", line 114, in import_main_class
    module = importlib.import_module(module_path)
  File "/usr/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/gpfs/scratch/bsc88/valle_eval/lm-evaluation-harness/cache/cache_11652189/modules/datasets_modules/datasets/bbq_es/19963d729609081a7828e6f7772a9aaeb63cab0c3debb99ab416931989231d74/bbq_es.py", line 128
    "subcategory": row['subcategory']
                   ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
Traceback (most recent call last):
  File "/usr/local/bin/accelerate", line 8, in <module>
    sys.exit(main())
  File "/usr/local/lib/python3.10/dist-packages/accelerate/commands/accelerate_cli.py", line 46, in main
    args.func(args)
  File "/usr/local/lib/python3.10/dist-packages/accelerate/commands/launch.py", line 1075, in launch_command
    simple_launcher(args)
  File "/usr/local/lib/python3.10/dist-packages/accelerate/commands/launch.py", line 681, in simple_launcher
    raise subprocess.CalledProcessError(returncode=process.returncode, cmd=cmd)
subprocess.CalledProcessError: Command '['/usr/bin/python', '-m', 'lm_eval', '--model', 'hf', '--model_args', 'pretrained=/gpfs/projects/bsc88/text/models/instruction-tuning/models/out_instructed_models/salamandra2b_ca-en-es_v0.2,trust_remote_code=True', '--tasks', 'bbq_es_all', '--num_fewshot', '0', '--batch_size', '1', '--output_path', '/gpfs/projects/bsc88/text/bias/bbq/results/harness/salamandra2b_ca-en-es_v0.2/results:salamandra2b_ca-en-es_v0.2:bbq_es_all:0-shot_11652189.json', '--log_samples', '--seed', '1234']' returned non-zero exit status 1.
